--- a/index.html
+++ b/index.html
@@ -10,12 +10,31 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
+	<link href="css/hive.css" rel="stylesheet">
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+	<nav class="navbar">
+		<div id="logo">
+			<h2 id="appname">Hive</h2>
+		</div>
+		<div id="settings-cog">
+			<button type="button" class="btn btn-default" aria-label="Left Align">
+ 			 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+			</button>
+		</div>
+		<div class="navbar-right">
+			<div>
+			</div>
+			<div>
+			</div>
+		</div>
+	</nav>
 	<div class="container">
+
 	</div>
 </body>
 </html>
