--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</head>
 
+	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" type="text/css" href="css/hive.css">
+</head>
 <body>
-	<div class="container">
+	<div class="header">
+		<h2 class="header-text">This Week</h2>
 	</div>
-</body>
-</html>
+	<div class="header">
+		<h2 class="header-text">Upcoming Week</h2>
+	</div>
+	<body>
+		<div class="container">
+		</div>
+	</body>
+	</html>
